Greeting card spacing(styling-impr): margin fix

--- a/src/components/statuses/InitialGreeting.scss
+++ b/src/components/statuses/InitialGreeting.scss
@@ -2,6 +2,7 @@
 
 .greeting-card-wrapper {
   text-align: center;
+  margin: 50px 0;
 
   p {
     font-weight: 300;
